--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
         .y-axis-labels {
       line-height: 1;
       font-size: 0.7rem;
+      left:50px;
         }
         
     }
@@ -363,7 +364,7 @@
     </div>
     <div style="display: flex; justify-content: center;column-gap: 20px;margin-bottom: -40px;">
         <div class="legend-item">
-          <span style="padding-top: 10px;font-size: 0.6rem;">Share of Population</span>
+          <span style="padding-top: 20px;font-size: 0.8rem;color:#ADB8E6">Share of Population</span>
         </div>
   </div>
   </section>
