--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     }
     .y-axis-labels {
       position: absolute;
-      top: 56px;
+      top: 8px;
       left: 0;
       max-width: 20%;
       text-align: right;
       font-size: 0.7rem;
       color: rgba(255, 255, 255, 0.863);
-      height: calc(97% - 20%); /* Adjust based on padding */
+      height: calc(97% - 56px); /* Adjust based on padding */
       display: flex;
       flex-wrap: wrap;
       /* background-color: red; */
