--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       /* top: 0px; */
       /* background-color: green; */
       bottom: 0;
-      left: 24%;
+      left: 21%;
       max-width: 100%;
       display: flex;
-      justify-content: space-between;
-      width: calc(101% - 28%); /* Adjust for container width */
+      justify-content: space-around;
+      width: calc(101% - 22%); /* Adjust for container width */
       font-size: 0.6rem;
       color: rgba(255, 255, 255, 0.863);
     }
@@ -204,6 +204,14 @@
         .barmain{
 
       margin-left: 18%;}
+    }
+    .x-axis-labels {
+     
+      left: 23%;
+   
+      justify-content: space-around;
+      width: calc(89% - 10%); /* Adjust for container width */
+      
     }
     @media screen and (max-width: 768px){
         .y-axis-labels {
