--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     .grid-line {
       position: absolute;
       top: 35px;
-      margin-left: 6%;
+      margin-left: 6% !important;
       height: calc(100% - 60px); /* Match chart container height */
       width: 0.5px;
       background-color: #afafaf3b;
