--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     }
     .grid-line {
       
-      margin-left: 9%;
+      margin-left: 9% !important;
       
     }
     @media screen and (max-width: 768px){
