--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     .grid-line {
       position: absolute;
       top: 35px;
-      margin-left: 6% !important;
+      margin-left: 6%;
       height: calc(100% - 60px); /* Match chart container height */
       width: 0.5px;
       background-color: #afafaf3b;
@@ -246,7 +246,7 @@
     }
     .grid-line {
       
-      margin-left: 9% !important;
+      margin-left: 9%;
       
     }
     @media screen and (max-width: 768px){
