--- a/index.html
+++ b/index.html
@@ -249,6 +249,9 @@
       margin-left: 9%;
       
     }
+    .bars {
+      margin-left: 0%;
+    }
     @media screen and (max-width: 768px){
         .y-axis-labels {
       line-height: 1;
